feat: auto pass captcha

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bypass-captcha",
-  "description": "Bypass reCaptcha using YOLOv8 and Tensorflow.js",
+  "name": "auto-pass-recaptcha",
+  "description": "Auto pass reCaptcha using YOLOv8 and Tensorflow.js",
   "version": "1.0.0",
   "scripts": {
     "start": "vite",
@@ -17,16 +17,17 @@
   ],
   "author": "Wahyu Setianto",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Hyuto/yolov8-tfjs/issues"
-  },
-  "homepage": "https://github.com/Hyuto/yolov8-tfjs#readme",
   "dependencies": {
     "@tensorflow/tfjs": "^4.1.0",
     "@tensorflow/tfjs-backend-webgl": "^4.15.0",
+    "download": "^8.0.0",
+    "file-saver": "^2.0.5",
+    "html-to-image": "^1.11.11",
     "normalize.css": "^8.0.1",
+    "pluralize": "^8.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
